--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
         <h2>¿Necesitas ayuda con la talla?</h2>
         <p class="muted" style="color:var(--muted)">Escríbenos y te respondemos en pocas horas. También atendemos por IG.</p>
         <ul style="color:var(--muted)">
-          <li>Correo: hernangm2006@gmail.com</li>
-          <li>Instagram: hernangm_</li>
+          <li>Correo: -</li>
+          <li>Instagram: hanks_company</li>
         </ul>
       </div>
       <div class="mock">
